--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,8 +1,8 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install --include=dev && npm run build"
+buildCommand = "npm install --include=dev && npx tsc"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "node dist/index.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
