--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,3 +1,4 @@
+cat > backend/railway.toml << 'EOF'
 [build]
 builder = "NIXPACKS"
 buildCommand = "npm install --include=dev && npx tsc"
@@ -6,3 +7,4 @@ buildCommand = "npm install --include=dev && npx tsc"
 startCommand = "node dist/index.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+EOF
