fix: simplify railway.toml

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,10 +1,10 @@
 cat > backend/railway.toml << 'EOF'
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install --include=dev && npx tsc"
+buildCommand = "npm install --include=dev"
 
 [deploy]
-startCommand = "node dist/index.js"
+startCommand = "npx ts-node src/index.ts"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 EOF
